# llm-study-repo

./: 6_sLLM_학습하기.ipynb  README.md  pyproject.toml
